remove health filter as its same as online
