# node-registrar/docs/swagger.json
@@ -459,12 +459,6 @@
                     },
                     {
                         "type": "boolean",
-                        "description": "Filter by health status",
-                        "name": "healthy",
-                        "in": "query"
-                    },
-                    {
-                        "type": "boolean",
                         "description": "Filter by online status (true = online, false = offline)",
                         "name": "online",
                         "in": "query"
